# hypermodern

./: .coverage  .flake8  LICENSE  README.md  mypy.ini  noxfile.py  pyproject.toml
.github/workflows/: tests.yml
.mypy_cache/3.8/: _ast.data.json  _ast.meta.json  _importlib_modulespec.data.json  _importlib_modulespec.meta.json  _thread.data.json  _thread.meta.json  abc.data.json  abc.meta.json  ast.data.json  ast.meta.json  builtins.data.json  builtins.meta.json  codecs.data.json  codecs.meta.json  dataclasses.data.json  dataclasses.meta.json  datetime.data.json  datetime.meta.json  enum.data.json  enum.meta.json  io.data.json  io.meta.json  mmap.data.json  mmap.meta.json  noxfile.data.json  noxfile.meta.json  posix.data.json  posix.meta.json  socket.data.json  socket.meta.json  ssl.data.json  ssl.meta.json  string.data.json  string.meta.json  sys.data.json  sys.meta.json  textwrap.data.json  textwrap.meta.json  threading.data.json  threading.meta.json  (+8 more)
.mypy_cache/3.8/click/: __init__.data.json  __init__.meta.json  _termui_impl.data.json  _termui_impl.meta.json  core.data.json  core.meta.json  decorators.data.json  decorators.meta.json  exceptions.data.json  exceptions.meta.json  formatting.data.json  formatting.meta.json  globals.data.json  globals.meta.json  parser.data.json  parser.meta.json  termui.data.json  termui.meta.json  testing.data.json  testing.meta.json  (+4 more)
.nox/tests-3-8/: pyvenv.cfg
src/hypermodern/: __init__.py  console.py  wikipedia.py
src/hypermodern.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: __init__.py  conftest.py  test_console.py  test_wikipedia.py
(+101 files in other folders)
