[tool.poetry]
name = "hypermodern"
version = "0.1.0"
description = "The hypermodern Python project"
authors = ["rowlandzero"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/RowlandZero/hypermodern"
repository = "https://github.com/RowlandZero/hypermodern"
keywords = ["hypermodern"]

[tool.poetry.scripts]
hypermodern = "hypermodern.console:main"

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
requests = "^2.22.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
