[tool.poetry]
name = "hypermodern"
version = "0.1.0"
description = "The hypermodern Python project"
authors = ["rowlandzero"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/RowlandZero/hypermodern"
repository = "https://github.com/RowlandZero/hypermodern"
keywords = ["hypermodern"]

[tool.poetry.scripts]
hypermodern = "hypermodern.console:main"

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
requests = "^2.22.0"
flake8 = "^3.7.9"
desert = "^2020.1.6"
marshmallow = "^3.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
coverage = {extras = ["toml"], version = "^5.0.3"}
pytest-cov = "^2.8.1"
pytest-mock = "^2.0.0"
mypy = "^0.761"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["hypermodern"]

[tool.coverage.report]
show_missing = true


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
